--- a/index.html
+++ b/index.html
@@ -1,49 +1,70 @@
 <!DOCTYPE html>
 <html>
-
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Bl2c.GitHub.io : ">
+    <meta name="viewport" content="width=640">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+    <link rel="stylesheet" href="stylesheets/core.css" media="screen">
+    <link rel="stylesheet" href="stylesheets/mobile.css" media="handheld, only screen and (max-device-width:640px)">
+    <link rel="stylesheet" href="stylesheets/github-light.css">
 
-    <title>BL2C - Educação e Treinameo</title>
+    <script type="text/javascript" src="javascripts/modernizr.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script type="text/javascript" src="javascripts/headsmart.min.js"></script>
+    <script type="text/javascript">
+      $(document).ready(function () {
+        $('#main_content').headsmart()
+      })
+    </script>
+    <title>BL2C - Treinamento by BL2C</title>
   </head>
 
   <body>
+    <a id="forkme_banner" href="https://github.com/BL2C">View on GitHub</a>
+    <div class="shell">
 
-    <!-- HEADER -->
-<!--     <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/BL2C">View on GitHub</a>
-          <h1 id="project_title">Bl2c.GitHub.io</h1>
-          <h2 id="project_tagline"></h2>
+      <header>
+        <span class="ribbon-outer">
+          <span class="ribbon-inner">
+            <h1>BL2C - Treinamento</h1>
+            <h2></h2>
+          </span>
+          <span class="left-tail"></span>
+          <span class="right-tail"></span>
+        </span>
+      </header>
 
-        </header>
-    </div>
+      <div id="no-downloads">
+        <span class="inner">
+        </span>
+      </div>
 
- -->    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+
+      <span class="banner-fix"></span>
+
+
+      <section id="main_content">
         <h3>
-			<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true">
-				<span aria-hidden="true" class="octicon octicon-link"></span>
-			</a>Bem-vindo a BL2C
-		</h3>
+<a id="bem-vindo-a-bl2c" class="anchor" href="#bem-vindo-a-bl2c" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Bem-vindo a BL2C.</h3>
 
-		<p>Aguarde uma nova forma de ensino à distância.</p>
+<p>Aguarde uma nova forma de ensino à distância.</p>
       </section>
-    </div>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+      <footer>
+        <span class="ribbon-outer">
+          <span class="ribbon-inner">
+            <p>Projects by <a href="https://github.com/BL2C">BL2C</a> can be found on <a href="https://github.com/BL2C">GitHub</a></p>
+          </span>
+          <span class="left-tail"></span>
+          <span class="right-tail"></span>
+        </span>
+        <p>Generated with <a href="https://pages.github.com">GitHub Pages</a> using Merlot</p>
+        <span class="octocat"></span>
       </footer>
+
     </div>
 
     
-
   </body>
 </html>
